2010-04-09  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] User agent style sheets are crippled by moc -E in make-css-file-arrays.pl
        https://bugs.webkit.org/show_bug.cgi?id=37296

        Update expected files after removal of moc preprocessing of default css sheets.
        These test results now only differ in metrics from Mac ones.

        * platform/qt/editing/execCommand/insert-list-xml-expected.txt:
        * platform/qt/svg/custom/createImageElement2-expected.txt:
        * platform/qt/svg/custom/use-on-symbol-inside-pattern-expected.txt:

2010-04-08  Chris Evans  <cevans@chromium.org>

        Reviewed by Sam Weinig.

        Add test for POST & _blank popup blocker bypass.
        https://bugs.webkit.org/show_bug.cgi?id=34541

        * fast/events/popup-blocked-to-post-blank.html: added
        * fast/events/popup-blocked-to-post-blank-expected.txt: added

2010-04-08  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        [Chromium] Mark failing tests after r57292
        https://bugs.webkit.org/show_bug.cgi?id=37298

        * platform/chromium/test_expectations.txt:

2010-03-29  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Simon Fraser.

        Spatial Navigation: proper handle negative x or y coordinates
        https://bugs.webkit.org/show_bug.cgi?id=36773

        * fast/events/spatial-navigation/snav-offscreen-content-expected.txt: Added.
        * fast/events/spatial-navigation/snav-offscreen-content.html: Added.

2010-04-08  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] r57274 removed fast/forms/willvalidate-000.html,
        so it should be removed from Skipped list too.

        * platform/qt/Skipped: fast/forms/willvalidate-000.html removed.

2010-04-08  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Geoffrey Garen.

        Test that the creation callback is executed in the world where it
        was created.