@@ -9,7 +9,7 @@
                 background-color: blue;
             }
         }
-        @media (-webkit-view-mode: all) {
+        @media (-webkit-view-mode) {
             div {
                 background-color: green;
             }
