@@ -715,4 +715,3 @@ mini
 floating
 application
 fullscreen
-#all
